feat(graphql): add subscriptions for task lists and tasks
- Implemented GraphQL subscriptions for creating, updating, and deleting task lists.
- Added GraphQL subscriptions for creating, updating, and deleting tasks.
- Each subscription includes relevant fields and types for input and output.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,30 @@
 {
+  "api": {
+    "taskmaster": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "taskmaster776070dd"
+        }
+      ],
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [],
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authtaskmaster776070dd"
+            }
+          }
+        }
+      },
+      "providerPlugin": "awscloudformation",
+      "service": "AppSync"
+    }
+  },
   "auth": {
     "taskmaster776070dd": {
       "customAuth": false,
