--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -24,5 +24,12 @@
   ],
   "aws_appsync_graphqlEndpoint": "https://hxluxrtljvds5bznlrq6wc2hoy.appsync-api.us-east-2.amazonaws.com/graphql",
   "aws_appsync_region": "us-east-2",
-  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS"
+  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS",
+  "aws_cloud_logic_custom": [
+    {
+      "name": "taskmasterAuth",
+      "endpoint": "https://56c8aw2ujg.execute-api.us-east-2.amazonaws.com/dev",
+      "region": "us-east-2"
+    }
+  ]
 }
