feat(settings): expand cSpell words list for improved spell checking coverage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,21 +9,96 @@
     "amplify/backend/awscloudformation": true
   },
   "cSpell.words": [
+    "Acked",
+    "addmissingownerfields",
+    "addtimestampfields",
+    "affordances",
+    "amplifyconfiguration",
+    "amplifytools",
+    "authtaskmaster",
+    "Avenir",
+    "awscloudformation",
+    "awsconfiguration",
     "AWSJSON",
+    "bjhda",
+    "breakcirculardependency",
     "chakra",
+    "cleangeneratedmodelsdirectory",
     "codegen",
+    "conditionalcheckfailed",
+    "CRDT",
+    "createdemouser",
+    "creds",
+    "deeplinks",
+    "demoable",
+    "Dexie",
+    "eadfe",
+    "emitauthprovider",
+    "enableautoindexquerynames",
+    "enablecaseinsensitivity",
+    "enabledartnullsafety",
+    "enablegen",
+    "enableiterativegsiupdates",
+    "enablexcodeintegration",
+    "forcealiasattributes",
+    "generategraphqlpermissions",
+    "generateindexrules",
+    "generatemodelsforlazyloadandcustomselectionset",
+    "graphqltransformer",
+    "handlelistnullabilitytransparently",
+    "HSTS",
+    "identitypool",
+    "improvepluralization",
+    "lambdaexecutionpolicy",
+    "latestregionsupport",
     "METHODTODOLOGY",
+    "njsproj",
+    "nosniff",
+    "ntvs",
     "partialize",
+    "pcejsu",
+    "populateownerfieldforstaticgroupauth",
     "postmvp",
     "prereq",
+    "QLAPI",
     "reparent",
     "reparenting",
+    "respectprimarykeyattributesonconnectionfield",
+    "retaincasestyle",
+    "Rolef",
+    "secondarykeyasgsi",
+    "securityenhancementnotification",
+    "shoulddeepmergedirectiveconfigdefaults",
+    "showfieldauthnotification",
+    "Signup",
+    "skipoverridemutationinputtypes",
+    "subscriptionsinheritprimaryauth",
+    "suppressschemamigrationprompt",
+    "TASKLIST",
+    "taskma",
     "TOPBAR",
+    "transformerversion",
     "triaging",
+    "undismiss",
     "unfavoriting",
     "unprioritized",
     "Unsnooze",
+    "untriaged",
+    "urql",
+    "useappsyncmodelgenplugin",
+    "usedocsgeneratorplugin",
+    "useenabledmfas",
+    "useexperimentalpipelinedtransformer",
+    "usefieldnameforprimarykeyconnectionfield",
+    "useinclusiveterminology",
+    "userpool",
+    "userpoolclient",
+    "userui",
+    "usesubusernamefordefaultidentityclaim",
+    "usetypesgeneratorplugin",
+    "validatetypenamereservedwords",
     "Vite",
+    "xcconfig",
     "Zustand"
   ],
   "todo-tree.filtering.excludeGlobs": [
