feat(settings): add "Kiritimati" to cSpell words list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
     "HSTS",
     "identitypool",
     "improvepluralization",
+    "Kiritimati",
     "lambdaexecutionpolicy",
     "latestregionsupport",
     "METHODTODOLOGY",
