--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "lint": "eslint .",
     "verify": "npm run verify:codegen-graphql",
     "check": "npm run lint && npm run verify && npm run build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e:install": "playwright install",
+    "test:e2e": "playwright test",
+    "test:e2e:html": "playwright test --reporter=html",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.2",
@@ -28,6 +33,8 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
+    "@playwright/test": "^1.52.0",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
