feat(TODO): add a dark/light toggle mode to the backlog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
     "unfavoriting",
     "unprioritized",
     "Unsnooze",
+    "unsub",
     "untriaged",
     "urql",
     "useappsyncmodelgenplugin",
