feat(docs): add Amplify and platform systems overview documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "awsconfiguration",
     "AWSJSON",
     "bjhda",
+    "BOTTOMBAR",
     "breakcirculardependency",
     "chakra",
     "cleangeneratedmodelsdirectory",
